tests/fail/arg_mismatch_no_inst.us

fn id<T>(v:T) -> T {
    return v;
}

fn main()  {
  
    id(); // Expect : Expected `1` args found `0`
}